--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,10 @@
  -->
     <meta charset="utf-8">
     <title>Qaobee handball - statistiques sportives</title>
-    <meta name="description" content="Qaobee HB est une application destinée aux coachs et entraîneurs de handball leur permettant de collecter les statistiques de leur joueurs durant un match ou un entraînement"/>
-    <meta name="keywords" content="handball, sport, coach, entraîneur, statistiques, données sportives, entraînement, joueur de handball"/>
+    <meta name="description"
+          content="Qaobee HB est une application destinée aux coachs et entraîneurs de handball leur permettant de collecter les statistiques de leur joueurs durant un match ou un entraînement"/>
+    <meta name="keywords"
+          content="handball, sport, coach, entraîneur, statistiques, données sportives, entraînement, joueur de handball"/>
     <meta name="robots" content="index, follow"/>
     <meta name=viewport content="width=device-width, initial-scale=1">
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"/>
@@ -31,148 +33,7 @@
         }
     </script>
     <style>
-        #loader-wrapper {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            z-index: 1000
-        }
-
-        #loader {
-            display: block;
-            position: relative;
-            left: 50%;
-            top: 50%;
-            width: 150px;
-            height: 150px;
-            margin: -75px 0 0 -75px;
-            border-radius: 50%;
-            border: 3px solid transparent;
-            border-top-color: #3498db;
-            -webkit-animation: spin 2s linear infinite;
-            animation: spin 2s linear infinite;
-            z-index: 1001
-        }
-
-        #loader:before {
-            content: "";
-            position: absolute;
-            top: 5px;
-            left: 5px;
-            right: 5px;
-            bottom: 5px;
-            border-radius: 50%;
-            border: 3px solid transparent;
-            border-top-color: #e74c3c;
-            -webkit-animation: spin 3s linear infinite;
-            animation: spin 3s linear infinite
-        }
-
-        #loader:after {
-            content: "";
-            position: absolute;
-            top: 15px;
-            left: 15px;
-            right: 15px;
-            bottom: 15px;
-            border-radius: 50%;
-            border: 3px solid transparent;
-            border-top-color: #f9c922;
-            -webkit-animation: spin 1.5s linear infinite;
-            animation: spin 1.5s linear infinite
-        }
-
-        @-webkit-keyframes spin {
-            0% {
-                -webkit-transform: rotate(0deg);
-                -ms-transform: rotate(0deg);
-                transform: rotate(0deg)
-            }
-            100% {
-                -webkit-transform: rotate(360deg);
-                -ms-transform: rotate(360deg);
-                transform: rotate(360deg)
-            }
-        }
-
-        @keyframes spin {
-            0% {
-                -webkit-transform: rotate(0deg);
-                -ms-transform: rotate(0deg);
-                transform: rotate(0deg)
-            }
-            100% {
-                -webkit-transform: rotate(360deg);
-                -ms-transform: rotate(360deg);
-                transform: rotate(360deg)
-            }
-        }
-
-        #loader-wrapper .loader-section {
-            position: fixed;
-            top: 0;
-            width: 51%;
-            height: 100%;
-            background: #222;
-            z-index: 1000
-        }
-
-        #loader-wrapper .loader-section.section-left {
-            left: 0
-        }
-
-        #loader-wrapper .loader-section.section-right {
-            right: 0
-        }
-
-        .loaded #loader-wrapper .loader-section.section-left {
-            -webkit-transform: translateX(-100%);
-            -ms-transform: translateX(-100%);
-            transform: translateX(-100%);
-            -webkit-transition: all .7s .3s cubic-bezier(0.645, 0.045, 0.355, 1.000);
-            transition: all .7s .3s cubic-bezier(0.645, 0.045, 0.355, 1.000)
-        }
-
-        .loaded #loader-wrapper .loader-section.section-right {
-            -webkit-transform: translateX(100%);
-            -ms-transform: translateX(100%);
-            transform: translateX(100%);
-            -webkit-transition: all .7s .3s cubic-bezier(0.645, 0.045, 0.355, 1.000);
-            transition: all .7s .3s cubic-bezier(0.645, 0.045, 0.355, 1.000)
-        }
-
-        .loaded #loader {
-            opacity: 0;
-            -webkit-transition: all .3s ease-out;
-            transition: all .3s ease-out
-        }
-
-        .loaded #loader-wrapper {
-            visibility: hidden;
-            -webkit-transform: translateY(-100%);
-            -ms-transform: translateY(-100%);
-            transform: translateY(-100%);
-            -webkit-transition: all .3s 1s ease-out;
-            transition: all .3s 1s ease-out
-        }
-
-        .loader-logo {
-            width: 100%;
-            position: absolute;
-            top: 20%;
-            left: 0;
-            bottom: 0;
-            right: 0;
-            z-index: 999999
-        }
-
-        .loader-logo img {
-            margin-left: auto;
-            margin-right: auto;
-            display: block
-        }
+        #loader:after,#loader:before{content:"";position:absolute}#loader-wrapper{position:fixed;top:0;left:0;width:100%;height:100%;z-index:1000}#loader{display:block;position:relative;left:50%;top:50%;width:150px;height:150px;margin:-75px 0 0 -75px;border-radius:50%;border:3px solid transparent;border-top-color:#3498db;-webkit-animation:spin 2s linear infinite;animation:spin 2s linear infinite;z-index:1001}#loader:before{top:5px;left:5px;right:5px;bottom:5px;border-radius:50%;border:3px solid transparent;border-top-color:#ea5350;-webkit-animation:spin 3s linear infinite;animation:spin 3s linear infinite}#loader:after{top:15px;left:15px;right:15px;bottom:15px;border-radius:50%;border:3px solid transparent;border-top-color:#78BE78;-webkit-animation:spin 1.5s linear infinite;animation:spin 1.5s linear infinite}@-webkit-keyframes spin{0%{-webkit-transform:rotate(0);-ms-transform:rotate(0);transform:rotate(0)}100%{-webkit-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg)}}@keyframes spin{0%{-webkit-transform:rotate(0);-ms-transform:rotate(0);transform:rotate(0)}100%{-webkit-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg)}}#loader-wrapper .loader-section{position:fixed;top:0;width:51%;height:100%;background:#222;z-index:1000}#loader-wrapper .loader-section.section-left{left:0}#loader-wrapper .loader-section.section-right{right:0}.loaded #loader-wrapper .loader-section.section-left{-webkit-transform:translateX(-100%);-ms-transform:translateX(-100%);transform:translateX(-100%);-webkit-transition:all .7s .3s cubic-bezier(.645,.045,.355,1);transition:all .7s .3s cubic-bezier(.645,.045,.355,1)}.loaded #loader-wrapper .loader-section.section-right{-webkit-transform:translateX(100%);-ms-transform:translateX(100%);transform:translateX(100%);-webkit-transition:all .7s .3s cubic-bezier(.645,.045,.355,1);transition:all .7s .3s cubic-bezier(.645,.045,.355,1)}.loaded #loader{opacity:0;-webkit-transition:all .3s ease-out;transition:all .3s ease-out}.loaded #loader-wrapper{visibility:hidden;-webkit-transform:translateY(-100%);-ms-transform:translateY(-100%);transform:translateY(-100%);-webkit-transition:all .3s 1s ease-out;transition:all .3s 1s ease-out}.loader-logo{width:100%;position:absolute;top:20%;left:0;bottom:0;right:0;z-index:999999}.loader-logo img{margin-left:auto;margin-right:auto;display:block;max-width:80%;height:auto}
     </style>
     <link rel="manifest" href="/manifest.json">
     <link rel="icon" href="favicon.ico"/>
@@ -214,7 +75,7 @@
     </div>
 </main>
 <footer class="page-footer grey" ng-if="!user">
-    
+
     <div class="footer-copyright">
         <div class="container">
             <span class="white-text">Copyright &copy; <b>Qaobee</b> 2015
