--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,20 @@
     <meta name="keywords"
           content="handball, sport, coach, entraîneur, statistiques, données sportives, entraînement, joueur de handball"/>
     <meta name="robots" content="index, follow"/>
+    <meta property="og:locale" content="fr_FR" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Qaobee handball - statistiques sportives" />
+    <meta property="og:description" content="Qaobee HB est une application destinée aux coachs et entraîneurs de handball leur permettant de collecter les statistiques de leur joueurs durant un match ou un entraînement" />
+    <meta property="og:url" content="https://www.qaobee.com/" />
+    <meta property="og:site_name" content="Qaobee" />
+    <meta property="og:image" content="https://www.qaobee.com/assets/images/qaobee-logoRouge.png" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:description" content="Qaobee HB est une application destinée aux coachs et entraîneurs de handball leur permettant de collecter les statistiques de leur joueurs durant un match ou un entraînement" />
+    <meta name="twitter:title" content="Qaobee handball - statistiques sportives" />
+    <meta name="twitter:site" content="@Qaobee" />
+    <meta name="twitter:image" content="https://www.qaobee.com/assets/images/qaobee-logoRouge.png" />
+    <meta name="twitter:creator" content="@Qaobee" />
+
     <meta name=viewport content="width=device-width, initial-scale=1">
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"/>
     <meta http-equiv="Pragma" content="no-cache"/>
@@ -37,8 +51,6 @@
     </style>
     <link rel="manifest" href="/manifest.json">
     <link rel="icon" href="favicon.ico"/>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.2.6/animate.min.css"/>
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
     <!-- build:css({.tmp/serve,src}) styles/vendor.css -->
@@ -108,14 +120,14 @@
 <!-- angular templates will be automatically converted in js and inserted here -->
 <!-- endinject -->
 <!-- endbuild -->
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.2.6/animate.min.css"/>
 <script async src="../bower_components/momentjs/locale/de.js"></script>
 <script async src="../bower_components/momentjs/locale/en-gb.js"></script>
 <script async src="../bower_components/momentjs/locale/es.js"></script>
 <script async src="../bower_components/momentjs/locale/fr.js"></script>
-<script
-        src="https://www.google.com/recaptcha/api.js?onload=vcRecaptchaApiLoaded&render=explicit"
-        async defer
-></script>
+<script src="https://www.google.com/recaptcha/api.js?onload=vcRecaptchaApiLoaded&render=explicit"
+        async defer></script>
 <script type="text/javascript"
         src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyDgmw2WTzi6rbcC-WtWRmvK6YRA0Qd_v-g"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
