--- a/src/index.html
+++ b/src/index.html
@@ -21,19 +21,21 @@
     <meta name="keywords"
           content="handball, sport, coach, entraîneur, statistiques, données sportives, entraînement, joueur de handball"/>
     <meta name="robots" content="index, follow"/>
-    <meta property="og:locale" content="fr_FR" />
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="Qaobee handball - statistiques sportives" />
-    <meta property="og:description" content="Qaobee HB est une application destinée aux coachs et entraîneurs de handball leur permettant de collecter les statistiques de leur joueurs durant un match ou un entraînement" />
-    <meta property="og:url" content="https://www.qaobee.com/" />
-    <meta property="og:site_name" content="Qaobee" />
-    <meta property="og:image" content="https://www.qaobee.com/assets/images/qaobee-logoRouge.png" />
-    <meta name="twitter:card" content="summary" />
-    <meta name="twitter:description" content="Qaobee HB est une application destinée aux coachs et entraîneurs de handball leur permettant de collecter les statistiques de leur joueurs durant un match ou un entraînement" />
-    <meta name="twitter:title" content="Qaobee handball - statistiques sportives" />
-    <meta name="twitter:site" content="@Qaobee" />
-    <meta name="twitter:image" content="https://www.qaobee.com/assets/images/qaobee-logoRouge.png" />
-    <meta name="twitter:creator" content="@Qaobee" />
+    <meta property="og:locale" content="fr_FR"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:title" content="Qaobee handball - statistiques sportives"/>
+    <meta property="og:description"
+          content="Qaobee HB est une application destinée aux coachs et entraîneurs de handball leur permettant de collecter les statistiques de leur joueurs durant un match ou un entraînement"/>
+    <meta property="og:url" content="https://www.qaobee.com/"/>
+    <meta property="og:site_name" content="Qaobee"/>
+    <meta property="og:image" content="https://www.qaobee.com/assets/images/qaobee-logoRouge.png"/>
+    <meta name="twitter:card" content="summary"/>
+    <meta name="twitter:description"
+          content="Qaobee HB est une application destinée aux coachs et entraîneurs de handball leur permettant de collecter les statistiques de leur joueurs durant un match ou un entraînement"/>
+    <meta name="twitter:title" content="Qaobee handball - statistiques sportives"/>
+    <meta name="twitter:site" content="@Qaobee"/>
+    <meta name="twitter:image" content="https://www.qaobee.com/assets/images/qaobee-logoRouge.png"/>
+    <meta name="twitter:creator" content="@Qaobee"/>
     <meta name="theme-color" content="#EA5350">
     <meta name=viewport content="width=device-width, initial-scale=1">
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"/>
@@ -47,7 +49,151 @@
         }
     </script>
     <style>
-        #loader:after,#loader:before{content:"";position:absolute}#loader-wrapper{position:fixed;top:0;left:0;width:100%;height:100%;z-index:1000}#loader{display:block;position:relative;left:50%;top:50%;width:150px;height:150px;margin:-75px 0 0 -75px;border-radius:50%;border:3px solid transparent;border-top-color:#3498db;-webkit-animation:spin 2s linear infinite;animation:spin 2s linear infinite;z-index:1001}#loader:before{top:5px;left:5px;right:5px;bottom:5px;border-radius:50%;border:3px solid transparent;border-top-color:#ea5350;-webkit-animation:spin 3s linear infinite;animation:spin 3s linear infinite}#loader:after{top:15px;left:15px;right:15px;bottom:15px;border-radius:50%;border:3px solid transparent;border-top-color:#78BE78;-webkit-animation:spin 1.5s linear infinite;animation:spin 1.5s linear infinite}@-webkit-keyframes spin{0%{-webkit-transform:rotate(0);-ms-transform:rotate(0);transform:rotate(0)}100%{-webkit-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg)}}@keyframes spin{0%{-webkit-transform:rotate(0);-ms-transform:rotate(0);transform:rotate(0)}100%{-webkit-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg)}}#loader-wrapper .loader-section{position:fixed;top:0;width:51%;height:100%;background:#222;z-index:1000}#loader-wrapper .loader-section.section-left{left:0}#loader-wrapper .loader-section.section-right{right:0}.loaded #loader-wrapper .loader-section.section-left{-webkit-transform:translateX(-100%);-ms-transform:translateX(-100%);transform:translateX(-100%);-webkit-transition:all .7s .3s cubic-bezier(.645,.045,.355,1);transition:all .7s .3s cubic-bezier(.645,.045,.355,1)}.loaded #loader-wrapper .loader-section.section-right{-webkit-transform:translateX(100%);-ms-transform:translateX(100%);transform:translateX(100%);-webkit-transition:all .7s .3s cubic-bezier(.645,.045,.355,1);transition:all .7s .3s cubic-bezier(.645,.045,.355,1)}.loaded #loader{opacity:0;-webkit-transition:all .3s ease-out;transition:all .3s ease-out}.loaded #loader-wrapper{visibility:hidden;-webkit-transform:translateY(-100%);-ms-transform:translateY(-100%);transform:translateY(-100%);-webkit-transition:all .3s 1s ease-out;transition:all .3s 1s ease-out}.loader-logo{width:100%;position:absolute;top:20%;left:0;bottom:0;right:0;z-index:999999}.loader-logo img{margin-left:auto;margin-right:auto;display:block;max-width:80%;height:auto}
+        #loader:after, #loader:before {
+            content: "";
+            position: absolute
+        }
+
+        #loader-wrapper {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 1000
+        }
+
+        #loader {
+            display: block;
+            position: relative;
+            left: 50%;
+            top: 50%;
+            width: 150px;
+            height: 150px;
+            margin: -75px 0 0 -75px;
+            border-radius: 50%;
+            border: 3px solid transparent;
+            border-top-color: #3498db;
+            -webkit-animation: spin 2s linear infinite;
+            animation: spin 2s linear infinite;
+            z-index: 1001
+        }
+
+        #loader:before {
+            top: 5px;
+            left: 5px;
+            right: 5px;
+            bottom: 5px;
+            border-radius: 50%;
+            border: 3px solid transparent;
+            border-top-color: #ea5350;
+            -webkit-animation: spin 3s linear infinite;
+            animation: spin 3s linear infinite
+        }
+
+        #loader:after {
+            top: 15px;
+            left: 15px;
+            right: 15px;
+            bottom: 15px;
+            border-radius: 50%;
+            border: 3px solid transparent;
+            border-top-color: #78BE78;
+            -webkit-animation: spin 1.5s linear infinite;
+            animation: spin 1.5s linear infinite
+        }
+
+        @-webkit-keyframes spin {
+            0% {
+                -webkit-transform: rotate(0);
+                -ms-transform: rotate(0);
+                transform: rotate(0)
+            }
+            100% {
+                -webkit-transform: rotate(360deg);
+                -ms-transform: rotate(360deg);
+                transform: rotate(360deg)
+            }
+        }
+
+        @keyframes spin {
+            0% {
+                -webkit-transform: rotate(0);
+                -ms-transform: rotate(0);
+                transform: rotate(0)
+            }
+            100% {
+                -webkit-transform: rotate(360deg);
+                -ms-transform: rotate(360deg);
+                transform: rotate(360deg)
+            }
+        }
+
+        #loader-wrapper .loader-section {
+            position: fixed;
+            top: 0;
+            width: 51%;
+            height: 100%;
+            background: #222;
+            z-index: 1000
+        }
+
+        #loader-wrapper .loader-section.section-left {
+            left: 0
+        }
+
+        #loader-wrapper .loader-section.section-right {
+            right: 0
+        }
+
+        .loaded #loader-wrapper .loader-section.section-left {
+            -webkit-transform: translateX(-100%);
+            -ms-transform: translateX(-100%);
+            transform: translateX(-100%);
+            -webkit-transition: all .7s .3s cubic-bezier(.645, .045, .355, 1);
+            transition: all .7s .3s cubic-bezier(.645, .045, .355, 1)
+        }
+
+        .loaded #loader-wrapper .loader-section.section-right {
+            -webkit-transform: translateX(100%);
+            -ms-transform: translateX(100%);
+            transform: translateX(100%);
+            -webkit-transition: all .7s .3s cubic-bezier(.645, .045, .355, 1);
+            transition: all .7s .3s cubic-bezier(.645, .045, .355, 1)
+        }
+
+        .loaded #loader {
+            opacity: 0;
+            -webkit-transition: all .3s ease-out;
+            transition: all .3s ease-out
+        }
+
+        .loaded #loader-wrapper {
+            visibility: hidden;
+            -webkit-transform: translateY(-100%);
+            -ms-transform: translateY(-100%);
+            transform: translateY(-100%);
+            -webkit-transition: all .3s 1s ease-out;
+            transition: all .3s 1s ease-out
+        }
+
+        .loader-logo {
+            width: 100%;
+            position: absolute;
+            top: 20%;
+            left: 0;
+            bottom: 0;
+            right: 0;
+            z-index: 999999
+        }
+
+        .loader-logo img {
+            margin-left: auto;
+            margin-right: auto;
+            display: block;
+            max-width: 80%;
+            height: auto
+        }
     </style>
     <link rel="manifest" href="/manifest.json">
     <link rel="icon" href="favicon.ico"/>
@@ -152,14 +298,29 @@
 
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.2.6/animate.min.css"/>
-<script async src="../bower_components/momentjs/locale/de.js"></script>
-<script async src="../bower_components/momentjs/locale/en-gb.js"></script>
-<script async src="../bower_components/momentjs/locale/es.js"></script>
-<script async src="../bower_components/momentjs/locale/fr.js"></script>
+<script async defer src="../bower_components/momentjs/locale/de.js"></script>
+<script async defer src="../bower_components/momentjs/locale/en-gb.js"></script>
+<script async defer src="../bower_components/momentjs/locale/es.js"></script>
+<script async defer src="../bower_components/momentjs/locale/fr.js"></script>
 <script src="https://www.google.com/recaptcha/api.js?onload=vcRecaptchaApiLoaded&render=explicit"
         async defer></script>
-<script type="text/javascript"
+<script type="text/javascript" async defer
         src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyDgmw2WTzi6rbcC-WtWRmvK6YRA0Qd_v-g"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
+<script>
+    (function (i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+        a = s.createElement(o), m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+
+    ga('create', 'UA-72906581-1', 'auto');
+    ga('send', 'pageview');
+</script>
 </body>
 </html>
