--- a/src/index.html
+++ b/src/index.html
@@ -281,6 +281,8 @@
         </div>
     </div>
 </div>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
+<script type="text/javascript" src="https://js.stripe.com/v2/"></script>
 <!-- build:js(src) scripts/vendor.js -->
 <!-- bower:js -->
 <!-- run `gulp inject` to automatically populate bower script dependencies -->
@@ -307,7 +309,6 @@
         async defer></script>
 <script type="text/javascript" async defer
         src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyDgmw2WTzi6rbcC-WtWRmvK6YRA0Qd_v-g"></script>
-<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
 <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
             (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
